# LLT-PDF

./: .gitignore  README.md  index.html  package-lock.json  package.json
admin/: gas-script.js  generate_license.py  revoke_license.py
scripts/: verify-build.sh
src/: App.tsx  LicenseGate.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActivationScreen.tsx  Dropzone.tsx  ExpiredScreen.tsx  LanguageDialog.tsx  PageThumbnail.tsx  PdfViewer.tsx  RegistrationScreen.tsx  Toolbar.tsx  UpdateBanner.tsx
src/lib/: i18n.ts  license.ts  pdfEngine.ts  versionCheck.ts
src/styles/: global.css
