[package]
name = "llt-pdf"
version = "0.2.2"
edition = "2021"

[lib]
name = "llt_pdf_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
hex = "0.4"
